Resolve conflicts keeping our k8s code