@@ -16,38 +16,21 @@
  */
 package org.apache.spark.deploy.k8s.submit
 
-<<<<<<< HEAD
 import com.google.common.collect.Iterables
 import io.fabric8.kubernetes.api.model.{ContainerBuilder, DoneablePod, HasMetadata, Pod, PodBuilder, PodList, Secret, SecretBuilder}
 import io.fabric8.kubernetes.client.{KubernetesClient, Watch}
 import io.fabric8.kubernetes.client.dsl.{MixedOperation, NamespaceListVisitFromServerGetDeleteRecreateWaitApplicable, NamespaceVisitFromServerGetWatchDeleteRecreateWaitApplicable, PodResource, Resource}
-=======
-import scala.collection.JavaConverters._
-
-import com.google.common.collect.Iterables
-import io.fabric8.kubernetes.api.model._
-import io.fabric8.kubernetes.client.{KubernetesClient, Watch}
-import io.fabric8.kubernetes.client.dsl.{MixedOperation, NamespaceListVisitFromServerGetDeleteRecreateWaitApplicable, PodResource}
->>>>>>> master
 import org.mockito.{ArgumentCaptor, Mock, MockitoAnnotations}
 import org.mockito.Mockito.{doReturn, verify, when}
 import org.mockito.invocation.InvocationOnMock
 import org.mockito.stubbing.Answer
 import org.scalatest.BeforeAndAfter
-<<<<<<< HEAD
 import org.scalatest.mock.MockitoSugar._
 import scala.collection.JavaConverters._
 
 import org.apache.spark.{SparkConf, SparkFunSuite}
 import org.apache.spark.deploy.k8s.constants._
 import org.apache.spark.deploy.k8s.submit.submitsteps.{DriverConfigurationStep, KubernetesDriverSpec}
-=======
-import org.scalatest.mockito.MockitoSugar._
-
-import org.apache.spark.{SparkConf, SparkFunSuite}
-import org.apache.spark.deploy.k8s.Constants._
-import org.apache.spark.deploy.k8s.submit.steps.DriverConfigurationStep
->>>>>>> master
 
 class ClientSuite extends SparkFunSuite with BeforeAndAfter {
 
@@ -99,37 +82,22 @@ class ClientSuite extends SparkFunSuite with BeforeAndAfter {
     when(podOperations.withName(FirstTestConfigurationStep.podName)).thenReturn(namedPods)
     when(namedPods.watch(loggingPodStatusWatcher)).thenReturn(mock[Watch])
     doReturn(resourceList)
-<<<<<<< HEAD
         .when(kubernetesClient)
         .resourceList(createdResourcesArgumentCaptor.capture())
-=======
-      .when(kubernetesClient)
-      .resourceList(createdResourcesArgumentCaptor.capture())
->>>>>>> master
   }
 
   test("The client should configure the pod with the submission steps.") {
     val submissionClient = new Client(
-<<<<<<< HEAD
         submissionSteps,
         new SparkConf(false),
         kubernetesClient,
         false,
         "spark",
         loggingPodStatusWatcher)
-=======
-      submissionSteps,
-      new SparkConf(false),
-      kubernetesClient,
-      false,
-      "spark",
-      loggingPodStatusWatcher)
->>>>>>> master
     submissionClient.run()
     val createdPod = createdPodArgumentCaptor.getValue
     assert(createdPod.getMetadata.getName === FirstTestConfigurationStep.podName)
     assert(createdPod.getMetadata.getLabels.asScala ===
-<<<<<<< HEAD
         Map(FirstTestConfigurationStep.labelKey -> FirstTestConfigurationStep.labelValue))
     assert(createdPod.getMetadata.getAnnotations.asScala ===
         Map(SecondTestConfigurationStep.annotationKey ->
@@ -137,34 +105,16 @@ class ClientSuite extends SparkFunSuite with BeforeAndAfter {
     assert(createdPod.getSpec.getContainers.size() === 1)
     assert(createdPod.getSpec.getContainers.get(0).getName ===
         SecondTestConfigurationStep.containerName)
-=======
-      Map(FirstTestConfigurationStep.labelKey -> FirstTestConfigurationStep.labelValue))
-    assert(createdPod.getMetadata.getAnnotations.asScala ===
-      Map(SecondTestConfigurationStep.annotationKey ->
-        SecondTestConfigurationStep.annotationValue))
-    assert(createdPod.getSpec.getContainers.size() === 1)
-    assert(createdPod.getSpec.getContainers.get(0).getName ===
-      SecondTestConfigurationStep.containerName)
->>>>>>> master
   }
 
   test("The client should create the secondary Kubernetes resources.") {
     val submissionClient = new Client(
-<<<<<<< HEAD
         submissionSteps,
         new SparkConf(false),
         kubernetesClient,
         false,
         "spark",
         loggingPodStatusWatcher)
-=======
-      submissionSteps,
-      new SparkConf(false),
-      kubernetesClient,
-      false,
-      "spark",
-      loggingPodStatusWatcher)
->>>>>>> master
     submissionClient.run()
     val createdPod = createdPodArgumentCaptor.getValue
     val otherCreatedResources = createdResourcesArgumentCaptor.getAllValues
@@ -172,11 +122,7 @@ class ClientSuite extends SparkFunSuite with BeforeAndAfter {
     val createdResource = Iterables.getOnlyElement(otherCreatedResources).asInstanceOf[Secret]
     assert(createdResource.getMetadata.getName === FirstTestConfigurationStep.secretName)
     assert(createdResource.getData.asScala ===
-<<<<<<< HEAD
         Map(FirstTestConfigurationStep.secretKey -> FirstTestConfigurationStep.secretData))
-=======
-      Map(FirstTestConfigurationStep.secretKey -> FirstTestConfigurationStep.secretData))
->>>>>>> master
     val ownerReference = Iterables.getOnlyElement(createdResource.getMetadata.getOwnerReferences)
     assert(ownerReference.getName === createdPod.getMetadata.getName)
     assert(ownerReference.getKind === DRIVER_POD_KIND)
@@ -186,7 +132,6 @@ class ClientSuite extends SparkFunSuite with BeforeAndAfter {
 
   test("The client should attach the driver container with the appropriate JVM options.") {
     val sparkConf = new SparkConf(false)
-<<<<<<< HEAD
         .set("spark.logConf", "true")
         .set(
           org.apache.spark.internal.config.DRIVER_JAVA_OPTIONS,
@@ -198,19 +143,6 @@ class ClientSuite extends SparkFunSuite with BeforeAndAfter {
         false,
         "spark",
         loggingPodStatusWatcher)
-=======
-      .set("spark.logConf", "true")
-      .set(
-        org.apache.spark.internal.config.DRIVER_JAVA_OPTIONS,
-          "-XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDetails")
-    val submissionClient = new Client(
-      submissionSteps,
-      sparkConf,
-      kubernetesClient,
-      false,
-      "spark",
-      loggingPodStatusWatcher)
->>>>>>> master
     submissionClient.run()
     val createdPod = createdPodArgumentCaptor.getValue
     val driverContainer = Iterables.getOnlyElement(createdPod.getSpec.getContainers)
@@ -221,19 +153,11 @@ class ClientSuite extends SparkFunSuite with BeforeAndAfter {
     assert(driverJvmOptsEnvs.size === 4)
 
     val expectedJvmOptsValues = Seq(
-<<<<<<< HEAD
         "-Dspark.logConf=true",
         s"-D${SecondTestConfigurationStep.sparkConfKey}=" +
             s"${SecondTestConfigurationStep.sparkConfValue}",
         s"-XX:+HeapDumpOnOutOfMemoryError",
         s"-XX:+PrintGCDetails")
-=======
-      "-Dspark.logConf=true",
-      s"-D${SecondTestConfigurationStep.sparkConfKey}=" +
-        s"${SecondTestConfigurationStep.sparkConfValue}",
-      "-XX:+HeapDumpOnOutOfMemoryError",
-      "-XX:+PrintGCDetails")
->>>>>>> master
     driverJvmOptsEnvs.zip(expectedJvmOptsValues).zipWithIndex.foreach {
       case ((resolvedEnv, expectedJvmOpt), index) =>
         assert(resolvedEnv.getName === s"$ENV_JAVA_OPT_PREFIX$index")
